Bootstrap.Admin/wwwroot/css/theme.css
html {
    font-size: 16px;
    -ms-overflow-style: auto;
}

body {
    color: #797979;
    background: #f1f2f7;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -webkit-overflow-scrolling: touch;
}

.bg {
    background-color: #337ab7;
    height: 3px;
    position: absolute;
    left: 0;
    right: 0;
}

aside .bg, aside .nav-brand, aside .nav-header, .header .nav, .userinfo .dropdown-item:first-child {
    display: none;
}

.header {
    background: #fff;
}

    .header .nav {
        margin-left: 15px;
    }

        .header .nav .dropdown {
            margin-right: 6px;
        }

    .header .badge {
        position: absolute;
        right: -6px;
        top: -14px;
        opacity: 0.8;
    }

    .header .navbar {
        padding: 0 0 0 1rem;
    }

        .header .navbar .dropdown-menu {
            padding: 0.25rem 0;
        }

        .header .navbar .dropdown-menu-arrow {
            width: 0;
            height: 0;
            border-width: 0 6px 6px;
            border-style: solid;
            border-color: transparent transparent rgba(0,0,0,.15);
            position: absolute;
            left: 16px;
            margin-top: -10px;
        }

            .header .navbar .dropdown-menu-arrow:after {
                content: " ";
                width: 0;
                height: 0;
                border-width: 0 6px 6px;
                border-style: solid;
                border-color: transparent transparent #fff;
                position: absolute;
                top: 1px;
                left: -6px;
            }

    .header .dropdown-menu {
        padding: 0;
    }

.userinfo img {
    height: 29px;
    width: 29px;
    border-radius: 2px;
}

.userinfo .dropdown-toggle {
    display: block;
    padding: 6px;
    border-radius: 4px;
    transition: all .25s linear;
}

.userinfo .dropdown-toggle, .header .nav a {
    border: 1px solid #eee;
    color: #777;
}

    .userinfo .dropdown-toggle:after {
        vertical-align: middle;
    }

    .userinfo .dropdown-toggle:hover, .userinfo.show .dropdown-toggle, .nav [data-toggle="dropdown"]:hover {
        color: #333;
        border: solid 1px #337ab7;
    }

.userinfo .dropdown-item {
    display: flex;
    width: 270px;
    padding: 0;
    justify-content: space-around;
    background-color: #fff;
}

    .userinfo .dropdown-item a {
        text-align: center;
        color: #777;
        padding: 15px 10px;
        flex: 1 1 33.333%;
    }

        .userinfo .dropdown-item a i {
            font-size: 1.025rem;
            display: block;
            margin-bottom: 4px;
        }

    .userinfo .dropdown-item:first-child {
        border-radius: 4px 4px 0 0;
    }

        .userinfo .dropdown-item:first-child a:hover {
            color: #333;
        }

    .userinfo .dropdown-item:last-child {
        border-radius: 0 0 4px 4px;
    }

        .userinfo .dropdown-item:last-child a {
            color: #ca3a39;
            border-radius: 0 0 0.15rem 0.15rem;
            background: #a9d96c;
            background-image: linear-gradient(to bottom, #a9d96c 0%, #799e51 100%);
        }

            .userinfo .dropdown-item:last-child a:hover {
                color: #d40c0b;
            }

.userinfo .username {
    max-width: 90px;
    vertical-align: middle;
}

.userinfo .badge {
    left: 234px;
    right: auto;
    top: 6px;
}

.header .nav a {
    border-radius: 4px;
    padding: 6px 12px;
    transition: all .25s linear;
}

.nav .dropdown-menu {
    width: 235px;
    border: none;
    margin-left: -98px;
    margin-top: 12px;
}

.nav .dropdown-arrow {
    border-style: solid;
    border-width: 0 9px 9px;
    position: absolute;
    left: 108px;
    top: -9px;
}

.nav .dropdown-header {
    color: #fff;
    padding: 10px;
    border-radius: 4px 4px 0 0;
}

.nav .dropdown-footer {
    padding: 6px 0;
    background-color: #f1f2f7;
    border-bottom-left-radius: 4px;
    border-bottom-right-radius: 4px;
}

.nav .dropdown-item {
    display: flex;
    border-bottom: 1px solid #EBEBEB;
    padding: 10px 12px;
    font-size: 0.75rem;
}

    .nav .dropdown-item:nth-of-type(odd), .cache-item:nth-of-type(odd) {
        background-color: rgba(0, 0, 0, 0.05);
    }

    .nav .dropdown-item.active, .nav .dropdown-item:active {
        color: #212529;
    }

    .nav .dropdown-item > :nth-child(2) {
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
        display: inline-block;
        flex: 1 1 auto;
        padding: 0 6px;
    }

    .nav .dropdown-item .small {
        font-weight: bold;
    }

a, a:hover, a:focus {
    text-decoration: none;
    outline: none;
}

body, .form-control, .dropdown-menu, .btn:not(.btn-lg):not(.btn-xs), .input-group-text, .popover-header {
    font-size: 0.875rem;
}

    .form-control:focus {
        border-color: #66afe9;
        -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102,175,233,.6);
        box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102,175,233,.6);
    }

.container-fluid {
    padding-top: 15px;
}

.sidebar-open aside {
    transform: translate(0);
}

.sidebar-open footer, .sidebar-open .container-fluid {
    display: none;
}

.sidebar {
    background: inherit;
}

    .sidebar .nav-item {
        margin: 2px 10px;
        flex: 1 1 auto;
    }

    .sidebar .nav-sidebar {
        margin: 10px 0;
    }

    .sidebar .nav-link {
        color: #aeb2b7;
        padding: 10px 10px;
        transition: background .3s linear, color .3s linear;
        display: block;
        white-space: nowrap;
    }

        .sidebar .nav-link i:first-child {
            width: 22px;
        }

    .sidebar .sub {
        margin-top: 4px;
    }

        .sidebar .sub .nav-item {
            margin-right: 0;
        }

    .sidebar .nav-link .fa-angle-left {
        transition: all .3s linear;
        transform-origin: center;
    }
/* ... */

